--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/meili1991/newGitProgram.git"
   },
-  "author": "mei",
+  "author": "mei--",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/meili1991/newGitProgram/issues"
